Update swagger spec
